# prebid-analysis

./: .gitignore  README.md  Research_Proposal.md  config.yaml  inspect_keys.py  main.py  prompts.yaml  pyproject.toml
.antigravity/: rules.md
data/: bidder-data.csv  prebid_gpp_support_results.json
src/: verify_extraction.py
src/agent/: data_models.py  gpt_client.py  llm_client.py  prebid_agent.py  process_prebid_code.py
src/analysis/: inspect_prebid.py  prebid_gpp_support.py  prebid_gpp_support_old.py
src/helper/: config.py  db_operations.py  db_schema.py  db_session.py
src/loaders/: prebid_disclosure.py  prebid_docs_loader.py  prebid_hash_utils.py  prebid_loader.py
